refere to Tit For Tat as TFT instead of TfT in appendix
removes TODO

--- a/paper/list_of_strategies.tex
+++ b/paper/list_of_strategies.tex
@@ -173,11 +173,11 @@
 \item ThueMorseInverse~\cite{axelrodproject}
 \item Thumper~\cite{Ashlock2008}
 \item Tit For 2 Tats (\textbf{Tf2T})~\cite{Axelrod1981}
-\item Tit For Tat (\textbf{TfT})~\cite{Axelrod1980a}
+\item Tit For Tat (\textbf{TFT})~\cite{Axelrod1980a}
 \item Tricky Cooperator~\cite{axelrodproject}
 \item Tricky Defector~\cite{axelrodproject}
 \item Tullock~\cite{Axelrod1980a}
-\item Two Tits For Tat (\textbf{2TfT})~\cite{Axelrod1981}
+\item Two Tits For Tat (\textbf{2TFT})~\cite{Axelrod1981}
 \item VeryBad~\cite{Andre2013}
 \item Willing \cite{Van2015}
 \item Win-Shift Lose-Stay (\textbf{WShLSt})~\cite{Li2011}
