--- a/paper/main.tex
+++ b/paper/main.tex
@@ -102,7 +102,7 @@ Harper2017, Kendall2007, Stephens2002, Stewart2012} and today more hundreds of s
 in the literature.
 
 The winner of both of R. Axelrod's tournaments~\cite{Axelrod1980a, Axelrod1980b}
-was the simple strategy Tit For Tat (TFT) which cooperates  % TODO In the appendix we referr to TFT as TfT, we need to be consistent throughout.
+was the simple strategy Tit For Tat (TFT) which cooperates
 on the first turn and thereafter copies the previous action of its opponent,
 retailiating against defections with a defection, and forgiving a defection if followed
 by a cooperation. R. Axelrod concluded that the strategy's robustness was due to four
