cite raw data set
removes TODO

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -687,6 +687,19 @@ author = "J. H. Miller"
   howpublished = "\url{https://doi.org/10.5281/zenodo.3516652}"
 }
 
+@misc{raw_data,
+  author       = {Glynatsi, Nikoleta E.},
+  title        = {{A data set of 45686 Iterated Prisoner's Dilemma 
+                   tournaments' results [RAW DATA]}},
+  month        = apr,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {1.0.0},
+  doi          = {10.5281/zenodo.3753498},
+  url          = {https://doi.org/10.5281/zenodo.3753498}
+}
+
+
 @article{tzafestas-2000a,
  author = {Tzafestas, E.},
  booktitle = {From Animals to animals: Proceedings of the 6th International
