--- a/paper/main.tex
+++ b/paper/main.tex
@@ -200,8 +200,9 @@ and concludes that the properties of a successful strategy in the IPD are:
 
 The different tournament types as well as the data collection, made
 possible due to an open source library called Axelrod-Python (APL),
-are covered in Section~\ref{section:data_collection}. The data set generated  % TODO Modify this when the raw as well as the processed data is archived
-for this work has been made publicly available~\cite{data} and can be used
+are covered in Section~\ref{section:data_collection}. The raw as well as the processed
+data set generated
+for this work has been made publicly available~\cite{data, raw_data} and can be used
 for further analysis and insights.
 Section~\ref{section:top_performances}, focuses on the best performing
 strategies for each type of tournament and overall.
@@ -1024,7 +1025,8 @@ are:
 \end{itemize}
 
 The data set described in this work contains the largest number of IPD tournaments,
-to the authors knowledge, and it available at~\cite{data}. Further data mining % TODO Modify this when the raw data is also archived
+to the authors knowledge. The raw data set is available at~\cite{raw_data} and the
+processed data at~\cite{data}. Further data mining
 could be applied and provide new insights in the field.
 
 \bibliographystyle{plain}
