maths C, D, R, S, T, P in introduction

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -72,19 +72,19 @@ typically do not fare well in tournament settings.
 The Iterated Prisoner's Dilemma (IPD) is a repeated two player game that models
 behavioural interactions, specifically interactions where
 self-interest clashes with collective interest. At each turn of the game both
-players, simultaneously and independently, decide between cooperation (C) and
-defection (D), given memory of all prior interactions. The payoffs for each
+players, simultaneously and independently, decide between cooperation (\(C\)) and
+defection (\(D\)), given memory of all prior interactions. The payoffs for each
 player, at each turn, is influenced by their own choice and the choice of the
 other player. The payoffs of the game are defined by:
 
 \begin{center}
 {\renewcommand{\arraystretch}{2}%
 \begin{tabular}{c|c|c}
-& Cooperate (C) & Defect (D) \\
+& Cooperate (\(C\)) & Defect (\(D\)) \\
 \hline
-Cooperate (C) & R & S \\
+Cooperate (\(C\)) & \(R\) & \(S\) \\
 \hline
-Defect (D) & T & P \\
+Defect (\(D\)) & \(T\) & \(P\) \\
 \end{tabular}}
 \end{center}
 
