--- a/paper/main.tex
+++ b/paper/main.tex
@@ -98,7 +98,7 @@ game in 1950~\cite{Flood1958}. Following the computer tournaments of R. Axelrod 
 1980's~\cite{Axelrod1980a, Axelrod1980b}, a strategy's performance in a round
 robin computer tournament became a common evaluation technique for newly designed
 strategies. Many tournaments have followed Axelrod's~\cite{Beaufils1997, Bendor1991,
-Harper2017, Kendall2007, Stephens2002, Stewart2012} and today more hundreds of strategies exist
+Harper2017, Kendall2007, Stephens2002, Stewart2012} and today hundreds of more strategies exist
 in the literature.
 
 The winner of both of R. Axelrod's tournaments~\cite{Axelrod1980a, Axelrod1980b}
@@ -144,7 +144,7 @@ is often accompanied by a claim that the new strategy is the best known, despite
 only being tested against a small number of opponents or against specific classes of
 opponents not necessarily representative of all possible or all published strategies.
 The lack of testing against formally defined strategies and tournament winners
-is understandable given the effort required to implement the hundreds of published IPD strategies
+is understandable given the effort required to implement the hundreds of published IPD strategies.
 Implementing prior strategies faithfully is often extremely difficult or
 impossible due to insufficient descriptions and lack of published
 implementations or code.
@@ -152,7 +152,7 @@ This calls into question any claims of superiority or robustness of newly introd
 
 A set of envious IPD strategies were introduced called zero-determinant strategies (ZDs)
 in~\cite{Press2012}. These strategies attempt to force a linear relationship between
-stationary payoffs against other memory-one opponents, potentally ensuring that they
+stationary payoffs against other memory-one opponents, potentially ensuring that they
 receive a higher average payout. While ZDs were introduced with a small tournament in
 which some were reportedly successful \cite{Stewart2012}, this result has not generally
 held in future work. In~\cite{Harper2017} a series of strategies trained using
@@ -172,13 +172,13 @@ the same: what is the best way to play the game?
 Compared to other works, where typically a few selected or introduced strategies
 are evaluated on a small number of tournaments and/or small number of opponents,
 this manuscript evaluates the performance of \numberofstrategies
-strategies in \numberofalltournaments tournaments. Furthermore a large portion
+strategies in \numberofalltournaments tournaments. Furthermore, a large portion
 of the strategies used in this manuscript are drawn from known and named strategies
 in IPD literature, including many previous tournament winners,
 in contrast to other work that may have randomly generated many essentially arbitrary
 strategies (typically restrained to a class such as memory-one strategies,
 or those of a certain structural form such as finite state machines or deterministic
-memory two strategies). Additionally, our tournaments come in a
+memory-two strategies). Additionally, our tournaments come in a
 number of variations including standard tournaments emulating R. Axelrod's original tournaments,
 tournaments with noise, probabilistic match length, and both noise and probabilistic match length.
 This diversity of strategies and tournament types yields new insights and tests
