adds a bit on generosity and forgiveness in introduction

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -115,6 +115,13 @@ properties, which he adapted into four suggestions on doing well in an IPD:
     \item Do not be too clever by scheming to exploit the opponent
 \end{itemize}
 
+Forgiveness in R. Axelrod's terms is a two round procedure. Though essentially
+it is the strategy's ability to go from a \(DC\) to \(C\) aiming to achieve
+mutual cooperation again, the only way TFT would end up in \(DC\), in
+environments without noise, is if it had received a defection and it retaliated.
+Following, an opponent's defection if the opponent were to ``apologise''
+(resulting in a \(DC\) round), then TFT would forgive its opponent since mutual
+cooperation is better than mutual defection.
 As a result of the strategy's strong performance in both tournaments, and moreover in a
 series of evolutionary experiments~\cite{Axelrod1981}, TFT was often
 claimed to be a highly robust (and sometimes the most robust) strategy for the IPD.
@@ -133,7 +140,7 @@ Other work has built upon the limitations of TFT, and in some cases have shown
 that suggestions made by R. Axelrod did not necessarily apply in alternative environmental settings.
 In~\cite{Bendor1991, Donninger1986, Molander1985, Hammerstein1984} it was shown
 that TFT suffered in environments with noise. This was
-mainly due to the strategy's lack of generosity and contrition. Since TFT immediately
+mainly due to the strategy being too provocable and its lack of generosity and contrition. Since TFT immediately
 punishes a defection, in a noisy environment it can get stuck in a
 repeated cycle of defections and cooperations. Some new strategies, more
 robust in tournaments with noise, were soon introduced, including
@@ -193,7 +200,7 @@ and concludes that the properties of a successful strategy in the IPD are:
 \begin{itemize}
     \item \st{Do not be envious} Be a little bit envious
     \item Be ``nice'' in non-noisy environments or when game lengths are longer
-    \item Reciprocate both cooperation and defection correctly; Be somewhat provocable
+    \item Reciprocate both cooperation and defection correctly; Be provocable and generous
     \item \st{Do not be too clever} It's ok to be clever
     \item Adapt to the environment; Adjust to the mean population cooperation
 \end{itemize}
