fixes broken sentence for normalised rank

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -318,8 +318,8 @@ with which the strategy cooperated $(C_r)$, its match win count, and the
 probability that the strategy cooperated in the opening move. Moreover, the
 probabilities of a strategy being in any of the four states ($CC, CD, DC, DD$),
 and the rate of which the strategy cooperated after each state. The \textbf{normalised rank}
-feature that is manually added. The rank \(R\) of a given.
-strategy can vary between 0 (first) and \(N-1\) (last). Thus, the normalised rank,
+is a feature that has been manually added to the result summary. The rank \(R\) of a given
+strategy can vary between 0 (first) and \(N-1\) (last), and thus the normalised rank,
 denoted as $r$, is calculated as a strategy's rank divided by \(N - 1\).
 
 \newcolumntype{g}{>{\columncolor{Gray}}c}
