minor copy edits to performance section

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -580,7 +580,7 @@ On the whole, the analysis of this manuscript has shown that:
 \begin{itemize}
     \item In standard tournaments the dominating strategies were
     strategies that had been trained using reinforcement learning techniques.
-    \item In noisy environments where the noise probability strictly less than
+    \item In noisy environments where a noise probability strictly less than
     0.1 was considered, the successful strategies were strategies specifically
     designed or trained for noisy environments.
     \item In probabilistic ending tournaments most of the highly ranked
@@ -602,7 +602,7 @@ These have been strategies that have been trained, strategies that retailiate,
 and strategies that would adapt their behaviour based on preassigned rules
 to achieve the highest outcome. These results contradict some of R. Axelrod's suggestions,
 and more specifically, the suggestions `Do not be clever' and `Do not be envious'.
-We dig deeper into the crucial strategy features for success in the following sections.
+We dig deeper into the crucial strategy features for success in the following section.
 
 \section{Evaluation of performance}\label{section:evaluation_of_performance}
 
