minor copy edits in evaluation of performance section

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -772,12 +772,12 @@ cooperating ratio of the tournament, and in standard tournaments, the median is
 1. Therefore, an effective strategy in standard tournaments was the mean
 cooperator of its respective tournament.
 
-The distributions of SSE and \(CD\) to \(D\) rate for the winners of standard
+The distributions of SSE and \(CD\) to \(C\) rate for the winners of standard
 tournaments are also given in Figure~\ref{fig:discussion_standard}. The SSE
 distributions for the winners indicate that the strategy behaved in a ZD way in
 several tournaments, however, not constantly. The winners participated in
 matches where they did not try to extortionate their opponents. Furthermore, the
-\(CD\) to \(D\) distribution indicates that if a strategy were to defect against
+\(CD\) to \(C\) distribution indicates that if a strategy were to defect against
 the winners the winners would reciprocate on average with a probability of 0.5.
 
 \begin{figure}[!htbp]
