minor edits to abstract

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -52,17 +52,18 @@ however, rely on performance against a small number of somewhat arbitrarily sele
 strategies in a small number of tournaments, casting doubt on the generalizability
 of conclusions. We analyze a large collection of \numberofstrategies
 strategies in \numberofalltournaments tournaments, present the top performing strategies across multiple
-tournament types, and distill their salient features. The results show that there is not yet a single
-strategy that performs well in diverse Iterated Prisoner's Dilemma scenarios.
-Nevertheless there are several properties that heavily influence the best performing
-strategies, refining the properties described by R. Axelrod in light of
-recent and more diverse opponent populations. These are: be nice, be somewhat provocable
+tournament types, and distill their salient features.
+The results show that there is not yet a single
+strategy that performs well in diverse Iterated Prisoner's Dilemma scenarios,
+nevertheless there are several properties that heavily influence the best performing
+strategies. Refining the properties described by R. Axelrod in light of
+recent and more diverse opponent populations these are: be nice, be provocable and generous,
 be a little envious, be clever, and adapt to the environment. More precisely,
 we find that strategies perform best when their probability of cooperation
 matches the total tournament population's aggregate cooperation probabilities,
 or a proportion thereof in the case of noisy and probabilistically ending tournaments,
 and that the manner in which a strategy achieves the ideal cooperation rate is crucial.
-The features of high performing strategies reveal why strategies such as Tit For Tat
+The features of high performing strategies help cast some light on why strategies such as Tit For Tat
 performed historically well in tournaments and why zero-determinant strategies
 typically do not fare well in tournament settings.
 \end{abstract}
