eliminates the initial be in abstract

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -57,7 +57,7 @@ The results show that there is not yet a single
 strategy that performs well in diverse Iterated Prisoner's Dilemma scenarios,
 nevertheless there are several properties that heavily influence the best performing
 strategies. This refines the properties described by R. Axelrod in light of
-recent and more diverse opponent populations to be: be nice, be provocable and generous,
+recent and more diverse opponent populations to: be nice, be provocable and generous,
 be a little envious, be clever, and adapt to the environment. More precisely,
 we find that strategies perform best when their probability of cooperation
 matches the total tournament population's aggregate cooperation probabilities,
