rephrases the 100 strategies sentence.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -99,8 +99,8 @@ game in 1950~\cite{Flood1958}. Following the computer tournaments of R. Axelrod 
 1980's~\cite{Axelrod1980a, Axelrod1980b}, a strategy's performance in a round
 robin computer tournament became a common evaluation technique for newly designed
 strategies. Many tournaments have followed Axelrod's~\cite{Beaufils1997, Bendor1991,
-Harper2017, Kendall2007, Stephens2002, Stewart2012} and today hundreds of more strategies exist
-in the literature.
+Harper2017, Kendall2007, Stephens2002, Stewart2012} and now the
+literature and various codebases contain hundreds of strategies.
 
 The winner of both of R. Axelrod's tournaments~\cite{Axelrod1980a, Axelrod1980b}
 was the simple strategy Tit For Tat (TFT) which cooperates
