tweaks forgiveness paragraph based on marc's comments

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -116,13 +116,11 @@ properties, which he adapted into four suggestions on doing well in an IPD:
     \item Do not be too clever by scheming to exploit the opponent
 \end{itemize}
 
-Forgiveness in R. Axelrod's terms is a two round procedure. Though essentially
-it is the strategy's ability to go from a \(DC\) to \(C\) aiming to achieve
+Forgiveness is a strategy's ability to go from a \(DC\) to \(C\) aiming to achieve
 mutual cooperation again, the only way TFT would end up in \(DC\), in
-environments without noise, is if it had received a defection and it retaliated.
-Following, an opponent's defection if the opponent were to ``apologise''
-(resulting in a \(DC\) round), then TFT would forgive its opponent since mutual
-cooperation is better than mutual defection.
+environments without noise, is if it had received a defection and then retaliated.
+Subsequently, TFT would forgive an opponent that apologises (in a \(DC\) round)
+by returning to cooperation, since mutual cooperation is better than mutual defection.
 As a result of the strategy's strong performance in both tournaments, and moreover in a
 series of evolutionary experiments~\cite{Axelrod1981}, TFT was often
 claimed to be a highly robust (and sometimes the most robust) strategy for the IPD.
