softens property suggestion

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -199,7 +199,7 @@ and concludes that the properties of a successful strategy in the IPD are:
 \begin{itemize}
     \item \st{Do not be envious} Be a little bit envious
     \item Be ``nice'' in non-noisy environments or when game lengths are longer
-    \item Reciprocate both cooperation and defection correctly; Be provocable and generous
+    \item Reciprocate both cooperation and defection appropriately; Be provocable and generous but not extremely
     \item \st{Do not be too clever} It's ok to be clever
     \item Adapt to the environment; Adjust to the mean population cooperation
 \end{itemize}
