minor rewording for "the data and raw data"

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -206,9 +206,8 @@ and concludes that the properties of a successful strategy in the IPD are:
 
 The different tournament types as well as the data collection, made
 possible due to an open source library called Axelrod-Python (APL),
-are covered in Section~\ref{section:data_collection}. The raw as well as the processed
-data set generated
-for this work has been made publicly available~\cite{data, raw_data} and can be used
+are covered in Section~\ref{section:data_collection}. The raw and processed data
+sets have been made publicly available~\cite{data, raw_data} and can be used
 for further analysis and insights.
 Section~\ref{section:top_performances}, focuses on the best performing
 strategies for each type of tournament and overall.
